--- a/unida_cbs_products/pom.xml
+++ b/unida_cbs_products/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.3.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	
+
 	<groupId>me.dusanov.unida.cbs.products</groupId>
 	<artifactId>products-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -16,7 +16,8 @@
 	<description>Products Restful endpoint for CBS</description>
 
 	<properties>
-		<java.version>11</java.version>
+      <!--<java.version>11</java.version> -->
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
@@ -54,7 +55,7 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -66,7 +67,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
