--- a/unida_cbs_products/src/main/resources/application.yml
+++ b/unida_cbs_products/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   profiles: dev
   r2dbc:
     url: r2dbc:postgresql://localhost:5432/unida_cbs_products
-    username: dusan
-    password: dusan
+    username: chronos #dusan
+    password: chronos #dusan
 logging:
   level:
     org.springframework.data.r2dbc: Info
@@ -18,14 +18,14 @@ logging:
 spring:
   profiles: test
   r2dbc:
-    url: r2dbc:h2:mem:///test?options=DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE 
+    url: r2dbc:h2:mem:///test?options=DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 #    url: r2dbc:h2:mem:///test?options=DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;INIT=runscript from '/c/development/unida_exercise/unida_dbs/unida_cbs_products/create.sql';runscript from '/c/development/unida_exercise/unida_dbs/unida_cbs_products/data.sql'
     name: sa
     password:
 #    initialization-mode: always
   logging:
     level:
-      org.springframework: Info    
+      org.springframework: Info
 ---
 spring:
   profiles: prod
